{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 30,
  "lineage": "b9cad2d4-a009-2c12-a968-5b01ea746e59",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000014e8d990531ed",
            "arn": "arn:aws:ec2:us-west-1:367816904393:instance/i-0950ad27161cc76c0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0950ad27161cc76c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "fercanap-key-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a612ca29ee265e4",
            "private_dns": "ip-10-0-1-211.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_ip": "54.176.4.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079a762def0300f43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc09d9687aabc3a6",
            "tags": {
              "Name": "bastion-fercanap"
            },
            "tags_all": {
              "Name": "bastion-fercanap"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2b9a54f03de0ee2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ec2_key",
            "data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet_a",
            "module.network.aws_vpc.vpc",
            "module.securityGroups.aws_security_group.bastion",
            "tls_private_key.privateKey"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:367816904393:loadbalancer/app/alb-fercanap/62fd309bce0afc25",
            "arn_suffix": "app/alb-fercanap/62fd309bce0afc25",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-fercanap-786384392.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:367816904393:loadbalancer/app/alb-fercanap/62fd309bce0afc25",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-fercanap",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cc295ec8d0a180bb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ca185cb6f7b546d"
              },
              {
                "subnet_id": "subnet-0bc09d9687aabc3a6"
              }
            ],
            "subnets": [
              "subnet-02ca185cb6f7b546d",
              "subnet-0bc09d9687aabc3a6"
            ],
            "tags": {
              "Name": "alb-fercanap"
            },
            "tags_all": {
              "Name": "alb-fercanap"
            },
            "vpc_id": "vpc-0bdf0632bc629a8a6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public_subnet_a",
            "module.network.aws_subnet.public_subnet_b",
            "module.network.aws_vpc.vpc",
            "module.securityGroups.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:367816904393:listener/app/alb-fercanap/62fd309bce0afc25/858173dab1a81b7e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:367816904393:targetgroup/tg-fercanap/d3bf806644dc7562",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:367816904393:listener/app/alb-fercanap/62fd309bce0afc25/858173dab1a81b7e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:367816904393:loadbalancer/app/alb-fercanap/62fd309bce0afc25",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.aws_lb.web_alb",
            "module.loadbalancer.aws_lb_target_group.web_tg",
            "module.network.aws_subnet.public_subnet_a",
            "module.network.aws_subnet.public_subnet_b",
            "module.network.aws_vpc.vpc",
            "module.securityGroups.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:367816904393:targetgroup/tg-fercanap/d3bf806644dc7562",
            "arn_suffix": "targetgroup/tg-fercanap/d3bf806644dc7562",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:367816904393:targetgroup/tg-fercanap/d3bf806644dc7562",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:367816904393:loadbalancer/app/alb-fercanap/62fd309bce0afc25"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fercanap",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-fercanap"
            },
            "tags_all": {
              "Name": "tg-fercanap"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c980caed3415bfe2",
            "arn": "arn:aws:ec2:us-west-1:367816904393:elastic-ip/eipalloc-0c980caed3415bfe2",
            "association_id": "eipassoc-097b88df949210f67",
            "domain": "vpc",
            "id": "eipalloc-0c980caed3415bfe2",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0067fdbe74351e7fb",
            "private_dns": "ip-10-0-1-193.us-west-1.compute.internal",
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-54-219-243-135.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.243.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:internet-gateway/igw-02484ef816a7a8136",
            "id": "igw-02484ef816a7a8136",
            "owner_id": "367816904393",
            "tags": {
              "Name": "igw-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "igw-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c980caed3415bfe2",
            "association_id": "eipassoc-097b88df949210f67",
            "connectivity_type": "public",
            "id": "nat-02a08afdec68ff97b",
            "network_interface_id": "eni-0067fdbe74351e7fb",
            "private_ip": "10.0.1.193",
            "public_ip": "54.219.243.135",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bc09d9687aabc3a6",
            "tags": {
              "Name": "nat-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "nat-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_elastic_ip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet_a",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04e550608d8fdb12d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02a08afdec68ff97b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e550608d8fdb12d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_elastic_ip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.rt_nat",
            "module.network.aws_subnet.public_subnet_a",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02484ef816a7a8136",
            "id": "r-rtb-01b1c609ee8cb8f411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b1c609ee8cb8f41",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.rt_igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:route-table/rtb-01b1c609ee8cb8f41",
            "id": "rtb-01b1c609ee8cb8f41",
            "owner_id": "367816904393",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02484ef816a7a8136",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "rt-public-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:route-table/rtb-04e550608d8fdb12d",
            "id": "rtb-04e550608d8fdb12d",
            "owner_id": "367816904393",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a08afdec68ff97b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "rt-private-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07291ba240547111a",
            "route_table_id": "rtb-04e550608d8fdb12d",
            "subnet_id": "subnet-0dfe8245bb67f88b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.rt_nat",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c96325159efbcbc",
            "route_table_id": "rtb-01b1c609ee8cb8f41",
            "subnet_id": "subnet-0bc09d9687aabc3a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.rt_igw",
            "module.network.aws_subnet.public_subnet_a",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6bb7073c5d1b3cc",
            "route_table_id": "rtb-01b1c609ee8cb8f41",
            "subnet_id": "subnet-02ca185cb6f7b546d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.rt_igw",
            "module.network.aws_subnet.public_subnet_b",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:subnet/subnet-0dfe8245bb67f88b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfe8245bb67f88b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367816904393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "private-subnet-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:subnet/subnet-0bc09d9687aabc3a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc09d9687aabc3a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367816904393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "public-subnet-a-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:subnet/subnet-02ca185cb6f7b546d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ca185cb6f7b546d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367816904393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-b-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "public-subnet-b-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:vpc/vpc-0bdf0632bc629a8a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bddf7aaa5d7d808a",
            "default_route_table_id": "rtb-0fbad6f351ca41042",
            "default_security_group_id": "sg-0e69de9eeca453d32",
            "dhcp_options_id": "dopt-039abb22ec8aabf8b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdf0632bc629a8a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbad6f351ca41042",
            "owner_id": "367816904393",
            "tags": {
              "Name": "vpc-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "vpc-fercanap",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.securityGroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:security-group/sg-0c2b9a54f03de0ee2",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2b9a54f03de0ee2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "367816904393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "bastion-sg",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.securityGroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:security-group/sg-00d2ef8f47ea73898",
            "description": "Allow HTTP/HTTPS from public SG and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d2ef8f47ea73898",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2b9a54f03de0ee2"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc295ec8d0a180bb"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc295ec8d0a180bb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "367816904393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "private-sg",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.securityGroups.aws_security_group.bastion",
            "module.securityGroups.aws_security_group.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.securityGroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:367816904393:security-group/sg-0cc295ec8d0a180bb",
            "description": "Allow HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc295ec8d0a180bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "367816904393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "tags_all": {
              "Name": "public-sg",
              "Owner": "fercanap",
              "Project": "aws-final-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf0632bc629a8a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}